# TheBookofShannon

./: .env  .envrc  README.md  pyproject.toml
docs/obsidian/The Book of Shannon/: Claude Shannon.md  Entropy is a measure of the uncertainty in a random variable..md  Information is the resolution of uncertainty..md  Quotes.md  The fundamental problem of communication is that of reproducing at one point either exactly or approximately a message selected at another point..md  The problem of transmitting information over a noisy channel.md  We now consider the problem of transmitting information over a noisy channel..md  “A mathematical theory of communication... should serve as a broad framework.” – Claude Shannon.md  “Any difference that makes a difference can be a signal.” – Claude Shannon.md  “Capacity is not a function of power. It is a function of distinction.” – Claude Shannon.md  “Causality is structure enforced by ignorance.” – Werner Heisenberg.md  “Coding is the structure through which uncertainty becomes control.” – Claude Shannon.md  “Collapse is not destruction. It is decision.” – Erwin Schrödinger.md  “Entropy is a measure of the uncertainty in a random variable.” – Claude Shannon.md  “Every experiment destroys some of the knowledge of the system which was obtained by previous experiments.” – Werner Heisenberg.md  “In the beginning was the probability wave.” – Werner Heisenberg.md  (+30 more)
prompts/: sample.prompt.json
scripts/: run_ecosystem.py  sync_docs_to_vector.py  test_assistant.py  test_ecosystem.py
src/lib/: __init__.py
src/thebookofshannon/: __init__.py
(+30 files in other folders)
