[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thebookofshannon"
version = "0.1.0"
description = "Documentation and assistants for Claude Shannon's information theory"
readme = "README.md"
authors = [
    {name = "Jordyn Muraoka", email = "Jordynfinity@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.1",
    "pytest>=7.4.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
